# MPTT-Folders

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
dropfolders/: asgi.py  settings.py  urls.py  wsgi.py
folders/: admin.py  models.py  views.py
folders/migrations/: 0001_initial.py
templates/: index.html
