[tool.poetry]
name = "dropfolders"
version = "0.1.0"
description = ""
authors = ["Jessica Benson <pokeyjess72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-mptt = "^0.11.0"
django = "3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
